[REFACTOR] add token to product service