@@ -1,9 +1,8 @@
 package id.ac.ui.cs.advprog.heymartorder.service;
 
-import id.ac.ui.cs.advprog.heymartorder.model.KeranjangBelanja;
-import id.ac.ui.cs.advprog.heymartorder.model.KeranjangBelanjaBuilder;
-import id.ac.ui.cs.advprog.heymartorder.model.KeranjangItem;
 import id.ac.ui.cs.advprog.heymartorder.dto.GetProductResponse;
+import id.ac.ui.cs.advprog.heymartorder.model.KeranjangBelanja;
+import id.ac.ui.cs.advprog.heymartorder.model.KeranjangItem;
 import id.ac.ui.cs.advprog.heymartorder.repository.KeranjangBelanjaRepository;
 import id.ac.ui.cs.advprog.heymartorder.repository.KeranjangItemRepository;
 import id.ac.ui.cs.advprog.heymartorder.rest.ProductService;
@@ -15,9 +14,11 @@ import org.mockito.MockitoAnnotations;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 class KeranjangBelanjaServiceImplTest {
@@ -66,6 +67,14 @@ class KeranjangBelanjaServiceImplTest {
     }
 
     @Test
+    void testFindKeranjangByIdNotFound() {
+        Long userId = 1L;
+        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.empty());
+
+        assertThrows(NoSuchElementException.class, () -> keranjangBelanjaService.findKeranjangById(userId));
+    }
+
+    @Test
     void testAddProductToKeranjang() {
         Long userId = 1L;
         String productId = "product1";
@@ -81,23 +90,92 @@ class KeranjangBelanjaServiceImplTest {
         product1.setStock(10);
         product1.setPrice(10L);
 
-        when(productService.getProductById(productId)).thenReturn(product1);
+        String token = "token";
+
+        when(productService.getProductById(productId, token)).thenReturn(product1);
         when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
         when(keranjangBelanjaRepository.save(any(KeranjangBelanja.class))).thenReturn(keranjangBelanja);
 
-        KeranjangBelanja result = keranjangBelanjaService.addProductToKeranjang(userId, productId, supermarketId);
+        KeranjangBelanja result = keranjangBelanjaService.addProductToKeranjang(userId, productId, supermarketId, token);
 
         assertEquals(1, result.getListKeranjangItem().size());
-        assertEquals(productId, result.getListKeranjangItem().get(0).getProductId());
-        assertEquals(1, result.getListKeranjangItem().get(0).getAmount());
+        assertEquals(productId, result.getListKeranjangItem().getFirst().getProductId());
+        assertEquals(1, result.getListKeranjangItem().getFirst().getAmount());
         verify(keranjangBelanjaRepository, times(1)).save(keranjangBelanja);
+    }
+
+    @Test
+    void testAddProductToKeranjangInsufficientStock() {
+        Long userId = 1L;
+        String productId = "product1";
+        Long supermarketId = 2L;
+        KeranjangBelanja keranjangBelanja = new KeranjangBelanja();
+        keranjangBelanja.setId(userId);
+        keranjangBelanja.setSupermarketId(supermarketId);
+        keranjangBelanja.setListKeranjangItem(new ArrayList<>());
+
+        GetProductResponse product1 = new GetProductResponse();
+        product1.setUUID(productId);
+        product1.setName("Product 1");
+        product1.setStock(0);
+        product1.setPrice(10L);
+
+        String token = "token";
+
+        when(productService.getProductById(productId, token)).thenReturn(product1);
+        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
+
+        assertThrows(IllegalArgumentException.class, () -> keranjangBelanjaService.addProductToKeranjang(userId, productId, supermarketId, token));
+    }
+
+    @Test
+    void testAddProductToKeranjangProductNotFound() {
+        Long userId = 1L;
+        String productId = "product1";
+        Long supermarketId = 2L;
+        KeranjangBelanja keranjangBelanja = new KeranjangBelanja();
+        keranjangBelanja.setId(userId);
+        keranjangBelanja.setSupermarketId(supermarketId);
+        keranjangBelanja.setListKeranjangItem(new ArrayList<>());
+
+        String token = "token";
+
+        when(productService.getProductById(productId, token)).thenReturn(null);
+        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
+
+        assertThrows(IllegalArgumentException.class, () -> keranjangBelanjaService.addProductToKeranjang(userId, productId, supermarketId, token));
+    }
+
+    @Test
+    void testAddProductToKeranjangSupermarketMismatch() {
+        Long userId = 1L;
+        String productId = "product1";
+        Long supermarketId = 2L;
+        Long otherSupermarketId = 3L;
+        KeranjangBelanja keranjangBelanja = new KeranjangBelanja();
+        keranjangBelanja.setId(userId);
+        keranjangBelanja.setSupermarketId(otherSupermarketId);
+        keranjangBelanja.setListKeranjangItem(new ArrayList<>());
+
+        GetProductResponse product1 = new GetProductResponse();
+        product1.setUUID(productId);
+        product1.setName("Product 1");
+        product1.setStock(10);
+        product1.setPrice(10L);
+
+        String token = "token";
+
+        when(productService.getProductById(productId, token)).thenReturn(product1);
+        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
+
+        assertThrows(IllegalArgumentException.class, () -> keranjangBelanjaService.addProductToKeranjang(userId, productId, supermarketId, token));
     }
 
     @Test
     void testRemoveProductFromKeranjang() {
         Long userId = 1L;
         String productId = "product1";
-        KeranjangBelanja keranjangBelanja = new KeranjangBelanjaBuilder().setId(userId).build();
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).build();
         List<KeranjangItem> items = new ArrayList<>();
         KeranjangItem item = KeranjangItem.getBuilder().setProductId(productId).setAmount(2).build();
         item.setKeranjangbelanja(keranjangBelanja);
@@ -110,7 +188,7 @@ class KeranjangBelanjaServiceImplTest {
         KeranjangBelanja result = keranjangBelanjaService.removeProductFromKeranjang(userId, productId);
 
         assertEquals(1, result.getListKeranjangItem().size());
-        assertEquals(1, result.getListKeranjangItem().get(0).getAmount());
+        assertEquals(1, result.getListKeranjangItem().getFirst().getAmount());
         verify(keranjangBelanjaRepository, times(1)).save(keranjangBelanja);
     }
 
@@ -119,9 +197,7 @@ class KeranjangBelanjaServiceImplTest {
         Long userId = 1L;
         Long supermarketid = 2L;
         String productId = "product1";
-        KeranjangBelanja keranjangBelanja = new KeranjangBelanja();
-        keranjangBelanja.setId(userId);
-        keranjangBelanja.setSupermarketId(2L);
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).setSupermarketId(supermarketid).build();
 
         KeranjangItem item = KeranjangItem.getBuilder()
                 .setProductId(productId)
@@ -144,6 +220,7 @@ class KeranjangBelanjaServiceImplTest {
         verify(keranjangItemRepository, times(1)).delete(item);
         verify(keranjangBelanjaRepository, times(1)).save(keranjangBelanja);
     }
+
     @Test
     void testClearKeranjang() {
         Long userId = 1L;
@@ -176,47 +253,4 @@ class KeranjangBelanjaServiceImplTest {
         verify(keranjangItemRepository, times(1)).delete(item2);
         verify(keranjangBelanjaRepository, times(1)).save(keranjangBelanja);
     }
-
-    @Test
-    public void testCountTotal() {
-        Long userId = 1L;
-        Long supermarketId = 1L;
-
-        KeranjangBelanja keranjangBelanja = new KeranjangBelanjaBuilder()
-                .setId(userId)
-                .setSupermarketId(supermarketId)
-                .build();
-
-        List<KeranjangItem> items = new ArrayList<>();
-        KeranjangItem item1 = KeranjangItem.getBuilder().setProductId("1").setAmount(4).build();
-        KeranjangItem item2 = KeranjangItem.getBuilder().setProductId("2").setAmount(3).build();
-
-        items.add(item1);
-        items.add(item2);
-
-        keranjangBelanja.setListKeranjangItem(items);
-
-        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
-
-        GetProductResponse product1 = new GetProductResponse();
-        product1.setUUID("1");
-        product1.setName("Product 1");
-        product1.setStock(10);
-        product1.setPrice(10L);
-
-        GetProductResponse product2 = new GetProductResponse();
-        product2.setUUID("2");
-        product2.setName("Product 2");
-        product2.setStock(20);
-        product2.setPrice(20L);
-
-        List<GetProductResponse> productList = new ArrayList<>();
-        productList.add(product1);
-        productList.add(product2);
-
-        when(productService.getAllProduct(supermarketId)).thenReturn(productList);
-
-        assertEquals(100L, keranjangBelanjaService.countTotal(userId));
-    }
-
 }
